fluidsynth: look for fonts in user data dir

Fixes #19795.